<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.mobi.quicktabledemo.activities.ListOfRestaurantActivity">

    <LinearLayout
        android:id="@+id/ewt_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <RelativeLayout
            android:id="@+id/bookingStatus_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/primary_color">

            <TextView
                android:id="@+id/estimated_wait_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textViewTime"
                android:gravity="center"
                android:text="@string/ewt_text"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="00:00:00"
                android:textColor="@color/button_text_color"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTime"
                android:layout_centerHorizontal="true"
                android:text="HH:MM:SS"
                android:textStyle="bold"
                android:textColor="@color/button_text_color"/>

            <TextView
                android:id="@+id/rest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rest_address"
                android:textSize="16dp"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/button_text_color"/>

            <TextView
                android:id="@+id/rest_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="16dp"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/button_text_color"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/waiting_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/parties_waiting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/ewt_parties_ahead_text"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/parties_waiting_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@mipmap/white_circle_large"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/primary_color"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="26dp"
                android:textColor="@color/primary_color"
                android:visibility="gone"
                android:text="@string/ewt_next_seated_text"/>

            <TextView
                android:id="@+id/order_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/position"
                android:layout_above="@+id/quick_chat"
                android:gravity="center"
                android:textSize="26dp"
                android:textColor="@color/primary_color"
                android:text="@string/ewt_order_in_text"/>

            <Button
                android:id="@+id/quick_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/edit_order"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@color/primary_color"
                android:text="@string/quick_chat_text"
                android:textSize="20dp"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/edit_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/get_out_of_line"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:background="@color/primary_color"
                android:text="@string/pre_order_text"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/get_out_of_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@color/primary_color"
                android:text="@string/get_out_of_line_text"
                android:textColor="@color/button_text_color"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bookingStatus_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/noStatus"
                android:gravity="center"
                android:textSize="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ewt_no_booking_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loading_image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#fff">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/loading_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/loading_image"/>
        </RelativeLayout>
    </LinearLayout>

    <include
        android:id="@+id/seated_layout"
        layout="@layout/activity_checkout"
        android:visibility="gone"/>

</android.support.v4.widget.DrawerLayout>
